--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root{
     --color-primary:#364FC7;
 
     --color-grey-1: #212529;
-    --color-grey-2: #212529;
-    --color-grey-3: #212529;
-    --color-grey-4: #212529;
-    --color-grey-5: #212529;
-    --color-grey-6: #212529;
+    --color-grey-2: #868E96;
+    --color-grey-3: #ADB5BD;
+    --color-grey-4: #E9ECEF;
+    --color-grey-5: #F1F3F5;
+    --color-grey-6: #F8F9FA;
     --color-mode: #ffffff;
     
+}
+body{
+    font-family: 'Roboto', sans-serif;
 }
