--- a/styles/titulo.css
+++ b/styles/titulo.css
@@ -1,6 +1,9 @@
 .titulo{
     display: flex;
-    
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.75rem;
+    border-bottom: 2px solid var(--color-grey-4);
 }
 .titulo h1{
     color: var(--color-primary);
